[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "tsp"
version = "2.0"
authors = [
  { name="Justin Forest", email="hex@umonkey.net", },
  { name="Jon Hogg", email="hogg.jon@gmail.com" },
]
description = "Task spooler using sqlite db"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  	"Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "CC-PDM-1.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/jncl/tsp"
Issues = "https://github.com/jncl/tsp/issues"

[project.scripts]
tsp = "tsp.cli:main"
